# ICP_Master_Thesis

./: README.md  Setup.doc
Figures/: Theta.eps  Trajectory.eps
ICP/: DataCollect.py  Measurement.py  Pdf.py  Plotting.py  Vehicle.py  algorithm.py  algorithmKalman.py  measurementCreate.py  plotError.py  plotTrajectoryEstimates.py  randomtests.py  simulation.py  simulationErrorICP.py  simulationErrorKalman.py  simulationICP.py  simulationKalman.py  simulationNmp.py
ICP/Figures/: errorComp_2_1_1_16_1000000000_50_2.eps  errorComp_2_1_1_16_1_50_2.eps  errorComp_2_1_1_16_9_50_2.eps  trajectory_veh1_2_1_16_16_1_2.eps  trajectory_veh1_2_1_1_16_1_2.eps  trajectory_veh2_2_1_16_16_1_2.eps  trajectory_veh2_2_1_16_16_9_2.eps
ICP/Pickles/: dataICP2_1_16_16_1_2.pickle  dataICP2_1_16_16_9_2.pickle  dataICP2_1_1_16_1_2.pickle  dataKalman2_1_1_16_1.pickle  dataKalman2_1_1_16_9.pickle  errorICP2_1_16_16_1_50_2.pickle  errorICP2_1_1_16_9_50_2.pickle  errorICP2_2_16_16_1_50_2.pickle  errorICP2_2_1_16_1_50_2.pickle  errorICP2_2_1_16_9_50_2.pickle  errorICP2_3_1_16_1_50_2.pickle  errorKalman2_1_1_16_1000000000_50.pickle  errorKalman2_1_1_16_9_50.pickle  measurement2_3_16_16_1.pickle  measurement2_3_16_16_9.pickle  measurement2_3_1_16_9.pickle
ICP/random_shit/: testPred.py
Matlab/: 3Anchor.fig  4Anchor.fig  4Anchor2.fig  5Anchor.fig  CRB.m  CRB2.m  CRB2.m~  lambda.m  untitled.m
Matlab/Figures/: 3Anchor.eps  4Anchor.eps  4Anchor2.eps  5Anchor.eps  CRB_Distance.eps  config.eps
Matlab/Sensor/: ReadMe.txt  rangingDemo.m  rcmGetConfig.m  rcmReceiveInfo.m  rcmSendRangeRequest.m  rcmSetConfig.m
robot_ws/: ICP_Startup.sh  Robot0_Startup.sh
robot_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
robot_ws/devel/include/masterclient/: BaseEndGetCoord.h  BaseEndGetCoordRequest.h  BaseEndGetCoordResponse.h  Floats.h  GetCoord.h  GetCoordRequest.h  GetCoordResponse.h  Iterator.h  IteratorRequest.h  IteratorResponse.h
robot_ws/devel/include/robotclient/: Floats.h  GetCoord.h  GetCoordRequest.h  GetCoordResponse.h  MoveRobot.h  MoveRobotRequest.h  MoveRobotResponse.h  RotateRobot.h  RotateRobotRequest.h  RotateRobotResponse.h  UpdateTwist.h  UpdateTwistRequest.h  UpdateTwistResponse.h
robot_ws/devel/include/rosaria/: BumperState.h
robot_ws/src/Gulliview_server/: CMakeLists.txt  package.xml
robot_ws/src/Visionlocalization/: CMakeLists.txt  README.md
robot_ws/src/Visionlocalization/src/: .GulliView.cpp.swp  AprilTypes.h  CMakeLists.txt  CameraUtil.h  Geometry.cpp  GulliView.cpp  GulliView.cpp~  GulliViewServer.cpp  MathUtil.cpp  OpenCVHelper.h  TagDetection.h  TagFamily.cpp  maketags.cpp
robot_ws/src/controller/: CMakeLists.txt  Startup.sh  package.xml
robot_ws/src/icp/: CMakeLists.txt~  ICPNode.py~  package.xml~
robot_ws/src/icp4d/: CMakeLists.txt  package.xml~
robot_ws/src/masterclient/: CMakeLists.txt  package.xml
robot_ws/src/robotclient/: CMakeLists.txt  package.xml
(+307 files in other folders)
